# diagnostics

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Directory.Build.props  NuGet.config  debuggees.sln  diagnostics.sln  diagnostics.yml  dotnet.cmd  dotnet.sh  dotnet.sh.save  functions.cmake  global.json  startvs.cmd
src/SOS/: CMakeLists.txt
src/SOS/SOS.Hosting/: SOS.Hosting.csproj  SOSHost.cs  SOSLibrary.cs
src/SOS/SOS.InstallHelper/: InstallHelper.cs  SOS.InstallHelper.csproj
src/SOS/SOS.Package/: SOS.Package.csproj
src/SOS/SOS.UnitTests/: SOS.UnitTests.csproj
src/SOS/SOS.UnitTests/Debuggees/DivZero/: DivZero.cs  DivZero.csproj  Program.cs
src/SOS/SOS.UnitTests/Debuggees/DotnetDumpCommands/: DotnetDumpCommands.csproj  Program.cs
src/SOS/SOS.UnitTests/Debuggees/DotnetDumpCommands/Properties/: launchSettings.json
src/SOS/SOS.UnitTests/Debuggees/GCPOH/: GCPOH.cs
src/SOS/SOS.UnitTests/Debuggees/GCWhere/: GCWhere.cs
src/SOS/SOS.UnitTests/Debuggees/NestedExceptionTest/: NestedExceptionTest.cs  NestedExceptionTest.csproj
src/SOS/SOS.UnitTests/Debuggees/Overflow/: Overflow.cs  Overflow.csproj
src/SOS/SOS.UnitTests/Debuggees/ReflectionTest/: ReflectionTest.cs
src/SOS/SOS.UnitTests/Debuggees/SimpleThrow/: SimpleThrow.cs  UserObject.cs
src/SOS/SOS.UnitTests/Debuggees/SymbolTestApp/: SymbolTestApp.sln
src/SOS/SOS.UnitTests/Debuggees/SymbolTestApp/SymbolTestApp/: SymbolTestApp.cs  SymbolTestApp.csproj
src/SOS/SOS.UnitTests/Debuggees/SymbolTestApp/SymbolTestDll/: TestClass.cs  (+1 more)
src/SOS/SOS.UnitTests/Debuggees/TestDebuggee/: Program.cs  TestDebuggee.csproj
src/SOS/SOS.UnitTests/Debuggees/WebApp/: Program.cs  Startup.cs  WebApp.csproj
src/SOS/SOS.UnitTests/Debuggees/WebApp3/: Program.cs
src/SOS/dbgutil/: dbgutil.cpp  dbgutil.vcxproj  dbgutil.vcxproj.filters
(+159 files in other folders)
